[sy] dom: cycle 34 strings

--- a/sr/dom/chrome/dom/dom.properties
+++ b/sr/dom/chrome/dom/dom.properties
@@ -208,3 +208,4 @@ KeyNameZoomWarning=KeyboardEvent.key вредност "Zoom" је застаре
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key вредности које поћињу са "Dead" су застареле и биће спојене у само "Dead". За помоћ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Увожење XUL nodes у садржај документа је застарело. Ова функционалност ће бити уклоњена ускоро.
+XMLDocumentLoadPrincipalMismatch=Коришћење document.load је забрањено на документима који долазе из других прозора. Само у прозору у коме је документ направљен је дозвољено да се позове .load на тај докуменат. Пожељно, користите XMLHttpRequest уместо тога.
