--- a/sr/dom/chrome/security/csp.properties
+++ b/sr/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Покушај да се позове JavaScript из 
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Тумачим %1$S као име хоста,а не као кључну реч. Ако сте хтели да је користите као кључну реч, користите '%2$S' (апострофе).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Не подржавам директиву '%1$S'. Директиве и вредности ће бити игнорисане.
 
 # CSP Errors:
 policyURINotAlone = policy-uri директива може да се појави само сама
