[sy] toolkit: cycle 34 strings

--- a/sr/toolkit/chrome/global/aboutSupport.properties
+++ b/sr/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Параметри за клиртајп (ClearTyp
 adapterDescription = Опис адаптера
 adapterVendorID = ID продавача
 adapterDeviceID = ID уређаја
+adapterSubsysID = Subsys ID
 adapterDrivers = Драјвери адаптера
 adapterRAM = RAM адаптера
 driverVersion = Верзија драјвера
@@ -71,6 +72,7 @@ driverDate = Датум управљачког програма
 adapterDescription2 = Опис адаптера (GPU #2)
 adapterVendorID2 = Произвођач (GPU #2)
 adapterDeviceID2 = ID уређаја (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = Драјвери за адаптер (GPU #2)
 adapterRAM2 = Меморија на адаптеру (GPU #2)
 driverVersion2 = Издање драјвера (GPU #2)
