[sy] webapprt: cycle 34 strings

--- a/sr/webapprt/webapprt/webapp.properties
+++ b/sr/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Инсталирај %S
 webapps.install.description=Да ли желите да инсталирате %S?
 webapps.install.install=Инстралирај
 webapps.install.dontinstall=Нејмој инсталирати
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Деинстралирај %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Да ли желите да деинсталирате %S?
+webapps.uninstall.uninstall=Деинстралирај
+webapps.uninstall.dontuninstall=Нејмој деинсталирати
 
 paymentDialog.title=Плаћање
 paymentDialog.message=Који метод плаћања желите да користите?
