Bug 1046885 - Disable installing webapps in guest mode profiles.

--- a/pl/mobile/android/chrome/webapp.properties
+++ b/pl/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 próba pobierania nie powiodła się;#1 próby pobierani
 # #1 is the number of updates.
 # example: 3 updates failed
 retrievalFailedMessage=Nie udało się pobrać aktualizacji dla: %S;Nie udało się pobrać aktualizacji dla: %S;Nie udało się pobrać aktualizacji dla: %S
+
+webappsDisabledInGuest=Instalacja aplikacji jest niemożliwa w sesjach gościnnych
