[sy] mobile: cycle 34 strings

--- a/sr/mobile/android/chrome/browser.properties
+++ b/sr/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Инсталирај
 
 # Alerts
 alertAddonsDownloading=Преузимање додатака
-alertAddonsInstalledNoRestart=Инсталација успешна
 alertAddonsFail=Инсталација неуспешна
+alertAddonsInstalledNoRestart.message=Инсталација успешна
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=ДОДАЦИ
 
 alertDownloadsStart2=Преузимање почиње
 alertDownloadsDone2=Преузимање је завршено
@@ -19,8 +23,11 @@ alertDownloadsToast=Преузимање је започело…
 alertDownloadsPause=Заустави
 alertDownloadsResume=Настави
 alertDownloadsCancel=Откажи
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Преузимања су онемогућена у режиму за госте
 
-alertFullScreenToast=Притисните BACK да изађете из режима приказа преко целог екрана
+alertFullScreenToast=Притисните НАЗАД да изађете из режима приказа преко целог екрана
 
 # LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
 # %S will be replaced by the name of the search engine (exposed by the current page)
@@ -116,6 +123,35 @@ contacts.ask=Дозволити %S да приступи Вашим контак
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Не питај ме поново за овај сајт
 
+# Device Storage API
+deviceStorageMusic.allow=Дозволи
+deviceStorageMusic.dontAllow=Немој
+deviceStorageMusic.ask=Дозволити %S да приступи Вашој музици?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Немој ме опет питати за овај сајт
+
+deviceStoragePictures.allow=Дозволи
+deviceStoragePictures.dontAllow=Немој
+deviceStoragePictures.ask=Дозволити %S да приступи Вашим сликама?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Немој ме опет питати за овај сајт
+
+deviceStorageSdcard.allow=Дозволи
+deviceStorageSdcard.dontAllow=Немој
+deviceStorageSdcard.ask=Дозволити %S да приступи Вашем складишту?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Немој ме опет питати за овај сајт
+
+deviceStorageVideos.allow=Дозволи
+deviceStorageVideos.dontAllow=Немој
+deviceStorageVideos.ask=Дозволити %S да приступи Вашим видео снимцима?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Немој ме опет питати за овај сајт
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=нетачно
 selectionHelper.textCopied=Текст копиран на clipboard
 
 # Casting
-casting.prompt=Прикажи на уређају
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Пошаљи на уређај
+casting.mirrorTab=Пресликавање језичка
+casting.mirrorTabStop=Заустави пресликавање
 
 # Context menu
 contextmenu.openInNewTab=Отвори везу у новом језичку
@@ -209,7 +249,9 @@ contextmenu.unmute=Пусти тон
 contextmenu.saveVideo=Сними видео
 contextmenu.saveAudio=Сними аудио
 contextmenu.addToContacts=Додај у контакте
-contextmenu.castToScreen=Прикажи на екрану
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Пошаљи на уређај
 
 contextmenu.copy=Копирај
 contextmenu.cut=Исеци
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Е-пошта
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Изабери извор 
 feedHandler.subscribeWith=Прeтплати се на
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S је застарео. Молимо да користите %S
