Clean up Aurora

--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -450,6 +450,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Voulez-vous installer « %1$S » à partir du site (%2$S) ?
 webapps.install.success = Application installée
 webapps.install.inprogress = Installation en cours
+webapps.uninstall = Désinstaller
+webapps.uninstall.accesskey = D
+webapps.doNotUninstall = Ne pas désinstaller
+webapps.doNotUninstall.accesskey = M
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Voulez-vous désinstaller « %1$S » ?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S est maintenant affiché en mode plein écran.
