--- a/fr/browser/chrome/browser/loop/loop.properties
+++ b/fr/browser/chrome/browser/loop/loop.properties
@@ -171,13 +171,13 @@ video_call_menu_button=Conversation vidéo
 # Conversation Window Strings
 initiate_call_button_label2=Prêt à démarrer votre conversation ?
 incoming_call_title2=Demande de conversation
-incoming_call=Appel entrant
 incoming_call_accept_button=Accepter
 incoming_call_accept_audio_only_tooltip=Accepter en mode audio
 incoming_call_cancel_button=Annuler
 incoming_call_cancel_and_block_button=Annuler et bloquer
+incoming_call_block_button=Bloquer
 hangup_button_title=Raccrocher
-hangup_button_caption=Terminer l'appel
+hangup_button_caption2=Quitter
 mute_local_audio_button_title=Couper la diffusion audio
 unmute_local_audio_button_title=Reprendre la diffusion audio
 mute_local_video_button_title=Couper la diffusion vidéo
