--- a/fr/mobile/android/chrome/browser.properties
+++ b/fr/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Installer
 
 # Alerts
 alertAddonsDownloading=Téléchargement du module
-alertAddonsInstalledNoRestart=Installation terminée
 alertAddonsFail=Échec de l'installation
+alertAddonsInstalledNoRestart.message=Installation terminée
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=MODULES
 
 alertDownloadsStart2=Début du téléchargement
 alertDownloadsDone2=Téléchargement terminé
@@ -19,8 +23,11 @@ alertDownloadsToast=Téléchargement démarré…
 alertDownloadsPause=Pause
 alertDownloadsResume=Reprendre
 alertDownloadsCancel=Annuler
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Les téléchargements sont désactivés pour les sessions invités
 
-alertFullScreenToast=Appuyer sur RETOUR pour quitter le mode plein écran
+alertFullScreenToast=Appuyez sur RETOUR pour quitter le mode plein écran
 
 
 # LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
@@ -99,15 +106,44 @@ geolocation.dontAskAgain=Ne plus demander pour ce site
 
 # Contacts API
 contacts.allow=Autoriser
-contacts.dontAllow=Interdire
+contacts.dontAllow=Ne pas autoriser
 contacts.ask=Autoriser %S à accéder à vos contacts ?
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Ne plus demander pour ce site
 
+# Device Storage API
+deviceStorageMusic.allow=Autoriser
+deviceStorageMusic.dontAllow=Ne pas autoriser
+deviceStorageMusic.ask=Autoriser %S à accéder à votre musique ?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Ne plus demander pour ce site
+
+deviceStoragePictures.allow=Autoriser
+deviceStoragePictures.dontAllow=Ne pas autoriser
+deviceStoragePictures.ask=Autoriser %S à accéder à vos images ?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Ne plus demander pour ce site
+
+deviceStorageSdcard.allow=Autoriser
+deviceStorageSdcard.dontAllow=Ne pas autoriser
+deviceStorageSdcard.ask=Autoriser %S à accéder à votre stockage externe ?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Ne plus demander pour ce site
+
+deviceStorageVideos.allow=Autoriser
+deviceStorageVideos.dontAllow=Ne pas autoriser
+deviceStorageVideos.ask=Autoriser %S à accéder à vos vidéos ?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Ne plus demander pour ce site
+
 # Desktop notification UI
 desktopNotification.allow=Autoriser
-desktopNotification.dontAllow=Interdire
+desktopNotification.dontAllow=Ne pas autoriser
 desktopNotification.ask=Autoriser %S à afficher des notifications ?
 # LOCALIZATION NOTE (desktopNotification.useNotifications): Label that will be
 # used in site settings dialog.
@@ -347,3 +383,9 @@ browser.menu.context.mailto = Courriel
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Sélectionner un flux
 feedHandler.subscribeWith=S'abonner avec
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S est obsolète. Veuillez utiliser %S à la place.
