--- a/fr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fr/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Le mot de passe est verrouillé.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Erreur PKCS #11 inconnue.
 SEC_ERROR_BAD_CRL_DP_URL=URL invalide ou non gérée dans un point de distribution CRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Le certificat a été signé à l'aide d'un algorithme de signature qui est désactivé pour son manque de sûreté.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Le serveur utilise le mécanisme de « key pinning » (HPKP) mais aucune chaîne de confiance pour les certificats n'a pu être établie pour correspondre au pinset. Les violations de « key pinning » ne peuvent pas être forcées.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Le serveur utilise un certificat avec une extension de contraintes basiques qui l'identifie en tant qu'autorité de certification. Pour un certificat correctement émis cela ne devrait pas être le cas.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Le serveur a présenté un certificat dont la taille de la clé est trop petite pour établir une connexion sécurisée.
