--- a/fr/toolkit/chrome/global/aboutSupport.properties
+++ b/fr/toolkit/chrome/global/aboutSupport.properties
@@ -64,18 +64,20 @@ clearTypeParametersNotFound = Paramètres ClearType introuvables
 adapterDescription = Description de la carte
 adapterVendorID = ID du vendeur
 adapterDeviceID = ID du périphérique
+adapterSubsysID = ID du sous-système
 adapterDrivers = Pilotes de la carte
 adapterRAM = RAM de la carte
 driverVersion = Version du pilote
 driverDate = Date du pilote
-adapterDescription2 = Description de la carte (GPU #2) 
-adapterVendorID2 = ID du vendeur (GPU #2) 
-adapterDeviceID2 = ID du périphérique (GPU #2)
-adapterDrivers2 = Pilote de la carte (GPU #2)
-adapterRAM2 = RAM de la carte (GPU #2)
-driverVersion2 = Version du pilote (GPU #2)
-driverDate2 = Date du pilote (GPU #2)
-isGPU2Active = GPU #2 active
+adapterDescription2 = Description de la carte (GPU 2)
+adapterVendorID2 = ID du vendeur (GPU 2)
+adapterDeviceID2 = ID du périphérique (GPU 2)
+adapterSubsysID2 = ID du sous-système (GPU 2)
+adapterDrivers2 = Pilote de la carte (GPU 2)
+adapterRAM2 = RAM de la carte (GPU 2)
+driverVersion2 = Version du pilote (GPU 2)
+driverDate2 = Date du pilote (GPU 2)
+isGPU2Active = GPU 2 actif
 webglRenderer = Rendu WebGL
 
 minLibVersions = Version minimale attendue
