--- a/fr/browser/chrome/browser/devtools/webconsole.properties
+++ b/fr/browser/chrome/browser/devtools/webconsole.properties
@@ -244,3 +244,10 @@ selfxss.okstring=autoriser le collage
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Afficher/Masquer les détails du message.
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(index)
+table.iterationIndex=(index d'itération)
+table.key=Clé
+table.value=Valeurs
