--- a/fr/dom/chrome/security/csp.properties
+++ b/fr/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Une tentative d'appel JavaScript depuis une chaîne de
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = %1$S a été interprété comme un nom d'hôte et non comme un mot-clé. S'il s'agissait vraiment d'un mot-clé, utilisez '%2$S' (entouré d'apostrophes).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Directive « %1$S » non prise en charge. La directive et les valeurs seront ignorés.
 
 # CSP Errors:
 policyURINotAlone = La directive « policy-uri » peut uniquement apparaître seule
