--- a/fr/webapprt/webapprt/webapp.properties
+++ b/fr/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Installer %S
 webapps.install.description=Souhaitez-vous installer %S ?
 webapps.install.install=Installer l'application
 webapps.install.dontinstall=Ne pas installer
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Désinstaller %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Voulez-vous désinstaller %S ?
+webapps.uninstall.uninstall=Désinstaller l'application
+webapps.uninstall.dontuninstall=Ne pas désinstaller
 
 paymentDialog.title=Paiement
 paymentDialog.message=Quel prestataire de paiement souhaitez-vous utiliser ?
