Clean up Aurora, round 2

--- a/fr/mobile/android/chrome/webapp.properties
+++ b/fr/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 mise à jour a échoué;#1 mises à jour ont échoué
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Échec de la récupération de la mise à jour pour %1$S;Échec de la récupération des mises à jour pour %1$
+
+webappsDisabledInGuest=L'installation d'applications est désactivée pour les sessions invité
