--- a/fr/mobile/android/chrome/browser.properties
+++ b/fr/mobile/android/chrome/browser.properties
@@ -25,7 +25,7 @@ alertDownloadsResume=Reprendre
 alertDownloadsCancel=Annuler
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
 # when the user tries to download something in Guest mode.
-downloads.disabledInGuest=Les téléchargements sont désactivés pour les sessions invités
+downloads.disabledInGuest=Les téléchargements sont désactivés pour les sessions invité
 
 alertFullScreenToast=Appuyez sur RETOUR pour quitter le mode plein écran
 
@@ -214,6 +214,8 @@ selectionHelper.textCopied=Texte copié dans le presse-papiers
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
 casting.sendToDevice=Envoyer à l'appareil
+casting.mirrorTab=Dupliquer l'onglet
+casting.mirrorTabStop=Ne plus dupliquer
 
 # Context menu
 contextmenu.openInNewTab=Ouvrir dans un nouvel onglet
