--- a/fr/suite/chrome/common/notification.properties
+++ b/fr/suite/chrome/common/notification.properties
@@ -115,18 +115,20 @@ lwthemeNeedsRestart.restartButton=Redémarrer maintenant
 lwthemeNeedsRestart.restartButton.accesskey=R
 
 # Geolocation UI
-# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareLocation): 
-# If you're having trouble with the word Share, please use Allow and Block in your language.
+# LOCALIZATION NOTE (geolocation.shareLocation geolocation.dontShareThisRequest geolocation.alwaysShareForSite geolocation.neverShareForSite):
+#shareLocation is always visible, other entries are contextually relative to it
+#if this doesn't work for your language, use explicit Share or Allow/Block.
 geolocation.shareLocation=Partager sa localisation
 geolocation.shareLocation.accesskey=P
-geolocation.dontShareLocation=Ne pas la partager
-geolocation.dontShareLocation.accesskey=N
-geolocation.alwaysShareLocation=Toujours partager
-geolocation.alwaysShareLocation.accesskey=T
-geolocation.neverShareLocation=Ne jamais partager
-geolocation.neverShareLocation.accesskey=N
+geolocation.dontShareThisRequest=Pas cette fois-ci
+geolocation.dontShareThisRequest.accesskey=o
+geolocation.alwaysShareForSite=Toujours pour ce site
+geolocation.alwaysShareForSite.accesskey=T
+geolocation.neverShareForSite=Jamais pour ce site
+geolocation.neverShareForSite.accesskey=J
 geolocation.siteWantsToKnow=Ce site web (%S) veut savoir où vous vous trouvez.
 geolocation.fileWantsToKnow=Le fichier %S veut savoir où vous vous trouvez.
+
 # LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 geolocation.learnMore=En savoir plus…
@@ -145,14 +147,15 @@ webNotifications.showFromSite=Voulez-vous afficher des notifications de %S ?
 webNotifications.remember=Se souvenir de mon choix pour ce site
 
 # IndexedDB
-offlineApps.permissions=Ce site (%S) demande de conserver des données sur votre ordinateur pour un usage hors connexion.
-offlineApps.quota=Ce site (%1$S) essaie de conserver plus de %2$S Mo de données sur votre ordinateur pour un usage hors connexion.
-offlineApps.allow=Autoriser
-offlineApps.allow.accesskey=A
+offlineApps.permissions=Ce site (%S) demande de conserver des données sur votre ordinateur pour une utilisation hors connexion.
+offlineApps.private=Vous utilisez une fenêtre de navigation privée. Ce site web (%S) n'a pas été autorisé à stocker des données sur votre ordinateur pour une utilisation hors connexion.
+offlineApps.quota=Ce site (%1$S) essaie de conserver plus de %2$S Mo de données sur votre ordinateur pour une utilisation hors connexion.
+offlineApps.always=Toujours autoriser
+offlineApps.always.accesskey=A
 offlineApps.later=Pas maintenant
 offlineApps.later.accesskey=P
-offlineApps.deny=Jamais pour ce site
-offlineApps.deny.accesskey=e
+offlineApps.never=Jamais pour ce site
+offlineApps.never.accesskey=e
 
 # Block autorefresh
 refreshBlocked.goButton=Autoriser
