--- a/fr/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/fr/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -62,8 +62,8 @@ propertyCustom4=Divers 4
 ## Only used if the year isn't present and should be in the format used by Date.toLocaleFormat
 ## see http://developer.mozilla.org/en/Core_JavaScript_1.5_Reference/Global_Objects/Date/toLocaleFormat
 ## %B is the month's localized name and %e is the day of the month [1-31]
-## Separators (a space, dash, etc.) can be used
-dateformat=%e %B
+## Don't go using %e here, since it breaks things on Windows!
+dateFormatMonthDay=%d %B
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
