--- a/fr/suite/chrome/common/pref/prefutilities.properties
+++ b/fr/suite/chrome/common/pref/prefutilities.properties
@@ -9,7 +9,7 @@ downloadfolder=Choisir un répertoire de téléchargement
 cacheSizeInfo=Le cache utilise actuellement %1$S %2$S d'espace disque.
 
 # Offline apps
-appCacheSizeInfo=Le cache de votre application utilise actuellement %1$S %2$S d'espace disque.
+offlineAppSizeInfo=Le stockage hors connexion utilise actuellement %1$S %2$S d'espace disque.
 offlineAppRemoveTitle=Suppression des données de sites web en mode déconnecté
 offlineAppRemovePrompt=Après la suppression de ces données, %S ne sera pas disponible hors connexion. Voulez-vous vraiment supprimer ce site web pour une utilisation en mode déconnecté ?
 offlineAppRemoveConfirm=Supprimer les données hors connexion
