Missing strings Aurora

--- a/fr/browser/chrome/browser/devtools/webconsole.properties
+++ b/fr/browser/chrome/browser/devtools/webconsole.properties
@@ -245,6 +245,15 @@ selfxss.okstring=autoriser le collage
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Afficher/Masquer les détails du message.
 
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 emplacement disponible;#1 emplacements disponibles
+
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
 table.index=(index)
