--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -528,6 +528,12 @@ getUserMedia.noScreen.label = Aucun écran
 getUserMedia.noWindow.label = Aucune fenêtre
 getUserMedia.noAudio.label = Pas d'audio
 getUserMedia.shareEntireScreen.label = Écran entier
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 fenêtre);#1 (#2 fenêtres)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
