Missing strings Beta

--- a/fr/suite/chrome/common/notification.properties
+++ b/fr/suite/chrome/common/notification.properties
@@ -135,14 +135,17 @@ geolocation.learnMore=En savoir plus…
 geolocation.remember=Retenir pour ce site
 
 # Desktop Notifications
+# LOCALIZATION NOTE (webnotifications.showForSession webnotifications.dontShowThisSession webnotifications.alwaysShowForSite webnotifications.neverShowForSite):
+#showForSession is always visible, other entries are contextually relative to it
+#if this doesn't work for your language, use explicit Show or Allow/Block.
 webNotifications.showForSession=Afficher les notifications
 webNotifications.showForSession.accesskey=o
-webNotifications.dontShowForSession=Ne pas afficher
-webNotifications.dontShowForSession.accesskey=p
-webNotifications.alwaysShow=Toujours afficher
-webNotifications.alwaysShow.accesskey=a
-webNotifications.neverShow=Ne jamais afficher
-webNotifications.neverShow.accesskey=N
+webNotifications.dontShowThisSession=Pas pour cette session
+webNotifications.dontShowThisSession.accesskey=P
+webNotifications.alwaysShowForSite=Toujours pour ce site
+webNotifications.alwaysShowForSite.accesskey=T
+webNotifications.neverShowForSite=Jamais pour ce site
+webNotifications.neverShowForSite.accesskey=J
 webNotifications.showFromSite=Voulez-vous afficher des notifications de %S ?
 webNotifications.remember=Se souvenir de mon choix pour ce site
 
