--- a/fr/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/fr/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -232,7 +232,9 @@ copyMessageStart=Copie du message vers le dossier %S…
 copyMessageComplete=Copie terminée.
 copyMessageFailed=Échec de la copie.
 
-sendLargeMessageWarning=Attention ! Vous vous apprêtez à envoyer un message de %d octets. Voulez-vous vraiment envoyer ce message ?
+## LOCALIZATION NOTE (largeMessageSendWarning):
+## %S is the message size in user-friendly notation. Do not translate.
+largeMessageSendWarning=Attention ! Vous vous apprêtez à envoyer un message d'une taille de %S qui pourrait dépasser la limite autorisée par le serveur de courrier. Voulez-vous vraiment envoyer ce message ?
 
 sendingMessage=Envoi du message…
 sendMessageErrorTitle=Erreur d'envoi du message
