[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/preferences/preferences.properties
+++ b/cy/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Mae'r cwcis canlynol wedi eu storio ar eich cyfrifiadur:
 cookiesFiltered=Mae'r cwcis canlynol yn cyd-fynd â'r chwilio:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Tynnu data gwefan all-lein
 offlineAppRemovePrompt=Ar ôl tynnu'r data yma, ni fydd %S ar gael all-lein.  Ydych chi'n siŵr eich bod am dynnu'r wefan all-lein?
 offlineAppRemoveConfirm=Tynnu data all-lein
