--- a/cy/browser/chrome/browser/shellservice.properties
+++ b/cy/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=&Dewisiadau %S
 safeModeLabel=&Modd Diogel %S
-setDefaultBrowserTitle=Porwr Rhagosodedig
-setDefaultBrowserMessage=Nid %S yw eich porwr rhagosodedig. Hoffech chi ei osod fel eich porwr arferol?
-setDefaultBrowserDontAsk=Gwiriwch bob tro wrth gychwyn %S.
-alreadyDefaultBrowser=Mae %S eisoes wedi ei osod fel eich porwr ragosodedig.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Cael y gorau o %S drwy ei osod fel eich porwr rhagosodedig
+setDefaultBrowserConfirm.label     = Defnyddio %S fel fy mhorwr rhagosodedig
+setDefaultBrowserConfirm.accesskey = D
+setDefaultBrowserOptions.label     = Dewisiadau
+setDefaultBrowserOptions.accesskey = D
+setDefaultBrowserNotNow.label      = Nid nawr
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = Peidio gofyn eto
+setDefaultBrowserNever.accesskey   = P
+
+
 desktopBackgroundLeafNameWin=Desktop Background.bmp
 DesktopBackgroundDownloading=Cadw Darlun…
 DesktopBackgroundSet=Gosod Cefndir Bwrdd Gwaith
