--- a/cy/browser/chrome/browser/webrtcIndicator.properties
+++ b/cy/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Dangosydd Rhannu
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Mae eich camera a'ch meicroffon yn cael eu rhannu. Cliciwch i reoli'r rhannu.
 webrtcIndicator.sharingCamera.tooltip              = Mae eich camera'n cael ei rannu. Cliciwch i reoli'r rhannu.
 webrtcIndicator.sharingMicrophone.tooltip          = Mae eich meicroffon yn cael ei rannu. Cliciwch i reoli'r rhannu.
+webrtcIndicator.sharingApplication.tooltip = Mae rhaglen yn ei rannu. Cliciwch i reoli'r rhannu.
 webrtcIndicator.sharingScreen.tooltip = Mae eich sgrin yn cael ei rannu. Cliciwch i reoli'r rhannu.
 webrtcIndicator.sharingWindow.tooltip = Mae ffenestr yn cael ei rannu. Cliciwch i reoli'r rhannu.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Mae ffenestr yn cael ei rannu. Cliciwch 
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Rhannu camera gyda "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Rhannu Meicroffon gyda "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = Rhannu Rhaglen gyda "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Rhannu Sgrin gyda "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Rhannu Ffenestr gyda "%S"
 webrtcIndicator.controlSharing.menuitem = Rhannu Rheoli
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Rhannu Camera gyda #1 tab;Rhannu Camera gyda #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Rhannu Meicroffon gyda #1 tab;Rhannu Meicroffon gyda #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Rhannu Rhaglen gyda #1 tab;Rhannu Rhaglen gyda gyda #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Rhannu'r Sgrin gyda #1 tab;Rhannu'r Sgrin gyda #1 tab
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Rhannu Ffenestr gyda #1 tab;Rhannu Ffenestr gyda #1 tab
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
