--- a/cy/dom/chrome/security/csp.properties
+++ b/cy/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Rhwystrwyd ymgais i alw JavaScript o linyn (drwy alw s
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Dehongli %1$S fel enw gwesteiwr, nid allweddair. Os oeddech yn bwriadu iddo fod yn allweddair, defnyddiwch '%2$S' (wedi ei lapio mewn dyfynodau sengl).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Nid yw'n cynnal cyfarwyddeb '%1$S'. Bydd y cyfarwyddeb a gwerthoedd yn cael eu hanwybyddu.
 
 # CSP Errors:
 policyURINotAlone = dim ond ar ben ei hun gall policy-uri ymddangos
