--- a/cy/toolkit/chrome/global/aboutSupport.properties
+++ b/cy/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Heb ganfod paramedrau ClearType
 adapterDescription = Disgrifiad Addasydd
 adapterVendorID = Enw'r Gwerthwr
 adapterDeviceID = Enw Dyfais
+adapterSubsysID = Enw subsys
 adapterDrivers = Gyrwyr Addasydd
 adapterRAM = RAM Addasydd
 driverVersion = Fersiwn Gyrrwr
@@ -71,6 +72,7 @@ driverDate = Dyddiad y Gyrrwr
 adapterDescription2 = Disgrifiad Addasydd (GPU #2)\u0020
 adapterVendorID2 = Enw Gwerthwr (GPU #2)\u0020
 adapterDeviceID2 = Enw Dyfais (GPU #2)
+adapterSubsysID2 = Enw subsys (GPU #2)
 adapterDrivers2 = Gyrrwr Addasydd (GPU #2)
 adapterRAM2 = RAM Addasydd (GPU #2)
 driverVersion2 = Fersiwn Gyrrwr (GPU #2)
