--- a/cy/toolkit/chrome/global/dialog.properties
+++ b/cy/toolkit/chrome/global/dialog.properties
@@ -8,5 +8,5 @@ button-help=Cymorth
 button-disclosure=Rhagor o Wybodaeth
 accesskey-accept=
 accesskey-cancel=
-accesskey-help=H
-accesskey-disclosure=I
+accesskey-help=C
+accesskey-disclosure=D
