--- a/cy/webapprt/webapprt/webapp.properties
+++ b/cy/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Gosod %S
 webapps.install.description=Hoffech chi osod %S?
 webapps.install.install=Gosod Ap
 webapps.install.dontinstall=Peidio Gosod
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Dadosod %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Hoffech chi ddadosod %S?
+webapps.uninstall.uninstall=Dadosod Ap
+webapps.uninstall.dontuninstall=Peidio Dadosod
 
 paymentDialog.title=Taliad
 paymentDialog.message=Pa ddarparwr taliadau hoffech chi eu defnyddio?
