--- a/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -96,3 +96,6 @@ quit-button.tooltiptext.linux2 = Gadael %1$S (%2$S)
 # LOCALIZATION NOTE(quit-button.tooltiptext.mac): %1$S is the brand name (e.g. Firefox),
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Gadael %1$S (%2$S)
+
+loop-call-button.label = Gwahodd rhywun i siarad
+loop-call-button.tooltiptext = Gwahodd rhywun i siarad
