--- a/cy/browser/chrome/browser/devtools/projecteditor.properties
+++ b/cy/browser/chrome/browser/devtools/projecteditor.properties
@@ -11,6 +11,16 @@
 # A good criteria is the language in which you'd find the best
 # documentation on web development on the web.
 
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedTitle):
+# This string is displayed as as the title of the confirm prompt that checks
+# to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedTitle=Newidiadau heb eu Cadw
+
+# LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
+# This string is displayed as the message of the confirm prompt that checks
+# to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=Mae gennych newidiadau heb eu cadw bydd yn cael eu colli os fyddwch yn gadael. Ydych chi'n siŵr eich bod am barhau?
+
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
 # file / folder to be deleted.
