--- a/cy/browser/chrome/browser/devtools/scratchpad.properties
+++ b/cy/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Panel Scratchpad
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Scratchpad
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Rhybudd rhag Twyll: Cymrwch ofal wrth gludo pethau nad ydych yn eu deall. Gall hyn ganiatáu i ymosodwyr ddwyn eich hunaniaeth neu gymryd rheolaeth o'ch cyfrifiadur. Teipiwch '%S' isod i'r scratchpad i ganiatáu gludo.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=caniatáu gludo
