--- a/cy/dom/chrome/accessibility/AccessFu.properties
+++ b/cy/dom/chrome/accessibility/AccessFu.properties
@@ -45,7 +45,7 @@ equation       =       hafaliad
 buttonmenu     =       dewislen botwm
 whitespace     =       gofod gwyn
 pagetablist    =       rhestr tabiau
-canvas         =       canfas
+canvas         =       cynfas
 checkmenuitem  =       eitem dewislen gwirio
 label          =       label
 passwordtext   =       testun cyfrinair
@@ -94,11 +94,10 @@ listEnd        =       Eitem olaf
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 eitem;#1 eitem
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S o %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S ar gyfer %2$S
 
 # Landmark announcements
 banner         =       baner
@@ -108,17 +107,14 @@ main           =       prif
 navigation     =       symud
 search         =       chwilio
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S gyda %S a %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 colofn;#1 colofn
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = gydag 1 colofn;gydag #1 colofn
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 rhes;#1 rhes
+tblRowInfo = ac 1 rhes;ac #1 rhes
 
 # table or grid cell information
 columnInfo = Colofn %S
@@ -190,18 +186,85 @@ quicknav_Table       = Tablau
 quicknav_Checkbox    = Blychau ticio
 
 # Shortened role names for braille
-linkAbbr           =       dolen
-pushbuttonAbbr     =       btwm
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       ardal testun
+menubarAbbr        =       bar dewislen
+scrollbarAbbr      =       bar sgrolio
+gripAbbr           =       grip
+alertAbbr          =       rhybudd
+menupopupAbbr      =       llamlen dewislen
+documentAbbr       =       dogfen
+paneAbbr           =       paen
+dialogAbbr         =       deialog
+separatorAbbr      =       ymwahanydd
+toolbarAbbr        =       bar offer
+statusbarAbbr      =       bar statws
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       pennyn colofn
+rowheaderAbbr      =       pennyn rhes
+columnAbbr         =       colofn
+rowAbbr            =       rhes
+cellAbbr           =       cell
+linkAbbr           =       dolen
+listAbbr           =       rhestr
+listitemAbbr       =       eitem rhestr
+outlineAbbr        =       amlinell
+outlineitemAbbr    =       eitem amlinell
+pagetabAbbr        =       tab
+propertypageAbbr   =       tudalen priodwedd
+graphicAbbr        =       graffig
+pushbuttonAbbr     =       btwm
+checkbuttonAbbr    =       botwm gwirio
+radiobuttonAbbr    =       botwm radio
+comboboxAbbr       =       blwch cyfun
+progressbarAbbr    =       bar cynnydd
+sliderAbbr         =       llithrydd
+spinbuttonAbbr     =       botwm troilli
+diagramAbbr        =       diagram
+animationAbbr      =       animeiddio
+equationAbbr       =       hafaliad
+buttonmenuAbbr     =       dewislen botwm
+whitespaceAbbr     =       gofod gwyn
+pagetablistAbbr    =       rhestr tabiau
+canvasAbbr         =       cynfas
+checkmenuitemAbbr  =       eitem dewislen gwirio
+labelAbbr          =       label
+passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       eitem dewislen radio
+textcontainerAbbr  =       cynhwysydd testun
+togglebuttonAbbr   =       botwm toglo
+treetableAbbr      =       tabl coeden
+headerAbbr         =       pennyn
+footerAbbr         =       troedyn
+paragraphAbbr      =       paragraff
+entryAbbr          =       cofnod
+captionAbbr        =       pennawd
+headingAbbr        =       pennyn
+sectionAbbr        =       adran
+formAbbr           =       ffurflen
+comboboxlistAbbr   =       rhestr blwch cyfun
+comboboxoptionAbbr =       dewis blwch cyfun
+imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       dewisol
+listboxAbbr        =       blwch rhestr
+flatequationAbbr   =       hafaliad gwastad
+gridcellAbbr       =       cell grid
+noteAbbr           =       nodyn
+figureAbbr         =       fig
+definitionlistAbbr =       rhestr diffiniadau
+termAbbr           =       term
+definitionAbbr     =       diffiniad
+textareaAbbr       =       ardal testun
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
