[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/preferences/preferences.properties
+++ b/es-MX/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Las siguientes cookies están almacenadas en tu equipo:
 cookiesFiltered=Las siguientes cookies coinciden con tu búsqueda:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Eliminar datos del sitio en modo sin conexión
 offlineAppRemovePrompt=Después de eliminar estos datos, %S no estará disponible en modo sin conexión. ¿Realmente quieres eliminar los datos de este sitio web?
 offlineAppRemoveConfirm=Eliminar contenido en modo sin conexión
