--- a/es-MX/browser/chrome/browser/webrtcIndicator.properties
+++ b/es-MX/browser/chrome/browser/webrtcIndicator.properties
@@ -26,11 +26,24 @@ webrtcIndicator.sharingMicrophoneWith.menuitem = Compartiendo micrófono con "%S
 webrtcIndicator.sharingScreenWith.menuitem = Compartiendo pantalla con "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Compartiendo ventana con "%S"
 webrtcIndicator.controlSharing.menuitem = Controlar el intercambio
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Compartiendo cámara con #1 pestañas;Compartiendo cámara con #1 pestañas
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Compartiendo micrófono con #1 pestaña;Compartiendo micrófono con #1 pestañas
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Compartiendo pantalla con #1 pestaña;Compartiendo pantalla con #1 pestañas
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Compartiendo ventana con #1 pestaña;Compartiendo ventanas con #1 pestañas
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
