--- a/es-MX/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/es-MX/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -30,13 +30,13 @@ notifyBarUpdateButtonText = Actualizar contraseña
 notifyBarUpdateButtonAccessKey = U
 notifyBarDontChangeButtonText = No cambiar
 notifyBarDontChangeButtonAccessKey = D
-userSelectText = Confirme a qué usuario le cambiara la contraseña
+userSelectText = Por favor confirma a cuál usuario le cambiarás la contraseña
 hidePasswords=Ocultar contraseñas
-hidePasswordsAccessKey=P
+hidePasswordsAccessKey=O
 showPasswords=Mostrar contraseñas
-showPasswordsAccessKey=P
-noMasterPasswordPrompt=¿Realmente quieres mostrar tus contraseñas?
-removeAllPasswordsPrompt=¿Realmente quieres eliminar todas las contraseñas?
+showPasswordsAccessKey=M
+noMasterPasswordPrompt=¿Seguro que quieres mostrar tus contraseñas?
+removeAllPasswordsPrompt=¿Seguro que quieres eliminar todas las contraseñas?
 removeAllPasswordsTitle=Eliminar todas las contraseñas
 loginsSpielAll=En tu computadora hay contraseñas guardadas para los siguientes sitios:
 loginsSpielFiltered=Las siguientes contraseñas coinciden con tu búsqueda:
