--- a/es-MX/webapprt/webapprt/webapp.properties
+++ b/es-MX/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=Instalar %S
 webapps.install.description=¿Quieres instalar %S?
 webapps.install.install=Instalar App
 webapps.install.dontinstall=No instalar
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=Pago
 paymentDialog.message=¿Cuál proveedor de pago quieres usar?
