--- a/es-MX/browser/chrome/browser/browser.properties
+++ b/es-MX/browser/chrome/browser/browser.properties
@@ -74,7 +74,6 @@ lwthemeInstallRequest.allowButton.accesskey=P
 
 lwthemePostInstallNotification.message=Se ha instalado un nuevo tema.
 lwthemePostInstallNotification.undoButton=Deshacer
-lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=Administrar temas…
 lwthemePostInstallNotification.manageButton.accesskey=A
 
@@ -97,6 +96,9 @@ popupBlock=Bloquear ventanas emergentes a %S
 popupWarningDontShowFromMessage=No mostrar este mensaje cuando se bloqueen ventanas emergentes
 popupWarningDontShowFromLocationbar=No mostrar barra de información cuando las ventanas emergentes están bloqueadas
 popupShowPopupPrefix=Mostrar '%S'
+
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
 
 # missing plugin installer
 installPlugin.message = ¿Quieres instalar el plugin necesario para mostrar los recursos multimedia en esta página?
@@ -444,6 +446,7 @@ webapps.install.accesskey = I
 webapps.requestInstall = ¿Quieres instalar "%1$S" de este sitio (%2$S)?
 webapps.install.success = Aplicación instalada
 webapps.install.inprogress = Instalación en progreso
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S está ahora en pantalla completa.
@@ -505,9 +508,13 @@ getUserMedia.shareScreen.message = ¿Te gustaría compartir tu pantalla con %S?
 getUserMedia.shareCameraAndMicrophone.message = ¿Te gustaría compartir tu cámara y micrófono con %S?
 getUserMedia.shareScreenAndMicrophone.message = ¿Te gustaría compartir tu micrófono y pantalla con %S?
 getUserMedia.noVideo.label = Sin video
-getUserMedia.noWindowOrScreen.label = Sin ventana o pantalla
 getUserMedia.noAudio.label = Sin audio
 getUserMedia.shareEntireScreen.label = Pantalla completa
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -533,13 +540,19 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Dejar de compartir
 getUserMedia.stopSharing.accesskey = D
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S bloqueó contenido que no es seguro.
-mixedContentBlocked.keepBlockingButton.label = Continuar bloqueando
-mixedContentBlocked.keepBlockingButton.accesskey = b
-mixedContentBlocked.unblock.label = Desactivar la protección en esta página
-mixedContentBlocked.unblock.accesskey = D
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S parece lento… al… iniciar.
