--- a/es-MX/browser/chrome/browser/shellservice.properties
+++ b/es-MX/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=&Opciones %S
 safeModeLabel=%S Modo &seguro
-setDefaultBrowserTitle=Navegador predeterminado
-setDefaultBrowserMessage=%S no es tu navegador web predeterminado. ¿Quieres establecerlo como tal?
-setDefaultBrowserDontAsk=Comprobar esta configuración cada vez que se inicie %S.
-alreadyDefaultBrowser=%S ya es tu navegador predeterminado.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = Opciones
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNever.label       = No volver a preguntar
+setDefaultBrowserNever.accesskey   = N
+
+
 desktopBackgroundLeafNameWin=Fondo de escritorio.bmp
 DesktopBackgroundDownloading=Guardando imagen…
 DesktopBackgroundSet=Establecer como fondo de escritorio
