--- a/es-MX/dom/chrome/accessibility/AccessFu.properties
+++ b/es-MX/dom/chrome/accessibility/AccessFu.properties
@@ -7,9 +7,8 @@ screenReaderStarted = Lector de pantalla iniciado
 screenReaderStopped = Lector de pantalla detenido
 
 # Roles
-menubar        =       barra de menú
+menubar        =       barra de menús
 scrollbar      =       barra de desplazamiento
-grip           =       control
 alert          =       alerta
 menupopup      =       menú emergente
 document       =       documento
@@ -19,8 +18,8 @@ separator      =       separador
 toolbar        =       barra de herramientas
 statusbar      =       barra de estado
 table          =       tabla
-columnheader   =       cabecera de columna
-rowheader      =       cabecera de fila
+columnheader   =       encabezado de columna
+rowheader      =       encabezado de fila
 column         =       columna
 row            =       fila
 cell           =       celda
@@ -30,49 +29,10 @@ listitem       =       elemento de lista
 outline        =       contorno
 outlineitem    =       elemento de contorno
 pagetab        =       pestaña
-propertypage   =       página de propiedades
-graphic        =       gráfico
 pushbutton     =       botón
-checkbutton    =       casilla seleccionable
-radiobutton    =       botón de radio
-combobox       =       caja desplegable
-progressbar    =       barra de progreso
-slider         =       deslizador
-spinbutton     =       botón de incremento/decremento
-diagram        =       diagrama
-animation      =       animación
-equation       =       ecuación
-buttonmenu     =       menú de botón
-whitespace     =       espacio en blanco
-pagetablist    =       lista de pestañas
-canvas         =       canvas
-checkmenuitem  =       elemento de menú seleccionable
-label          =       etiqueta
 passwordtext   =       texto de contraseña
-radiomenuitem  =       elemento de menú de radio
-textcontainer  =       contenedor de texto
-togglebutton   =       botón de alternancia
-treetable      =       tabla/árbol
-header         =       encabezado
-footer         =       pie
-paragraph      =       párrafo
-entry          =       entrada
-caption        =       leyenda
-heading        =       encabezado
-section        =       sección
-form           =       formulario
-comboboxlist   =       lista desplegable
-comboboxoption =       opción de caja desplegable
 imagemap       =       mapa de imágenes
-listboxoption  =       opción
-listbox        =       caja de lista
-flatequation   =       ecuación plana
-gridcell       =       cuadrícula
-note           =       nota
 figure         =       figura
-definitionlist =       lista de definiciones
-term           =       término
-definition     =       definición
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       área de texto
@@ -94,11 +54,9 @@ listEnd        =       Último elemento
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 elemento;#1 elementos
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S de %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +66,12 @@ main           =       principal
 navigation     =       navegación
 search         =       buscar
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S con %S y %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 columna;#1 columnas
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 fila;#1 filas
 
 # table or grid cell information
 columnInfo = Columna %S
@@ -190,18 +143,21 @@ quicknav_Table       = Tablas
 quicknav_Checkbox    = Casillas de selección
 
 # Shortened role names for braille
+tableAbbr          =       tbl
 linkAbbr           =       lnk
 pushbuttonAbbr     =       btn
 passwordtextAbbr   =       passwdtxt
 imagemapAbbr       =       imgmap
 figureAbbr         =       fig
 textareaAbbr       =       areatxt
-tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
