--- a/es-MX/dom/chrome/security/csp.properties
+++ b/es-MX/dom/chrome/security/csp.properties
@@ -65,6 +65,8 @@ scriptFromStringBlocked = Se ha bloqueado un intento de invocar JavaScript desde
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Interpretando %1$S como nombre de servidor, no como palabra clave. si pretendías que fuera una palabra clave, usa '%2$S' (entre comillas simples).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
 
 # CSP Errors:
 policyURINotAlone = policy-uri directive can only appear alone
