[ms] update from Pootle (firefox)

--- a/ms/browser/updater/updater.ini
+++ b/ms/browser/updater/updater.ini
@@ -5,5 +5,5 @@
 ; All strings must be less than 600 chars.
 [Strings]
 TitleText=%MOZ_APP_DISPLAYNAME% Dikemaskini
-InfoText=%MOZ_APP_DISPLAYNAME% kini tengah memasang kemaskini anda dan akan bermula sebentar lagi…
+InfoText=%MOZ_APP_DISPLAYNAME% kini sedang memasang kemaskini anda dan akan bermula sebentar lagi…
 MozillaMaintenanceDescription=Mozilla Maintenance Service memastikan yang anda mempunyai yang terkini dan versi yang paling selamat Mozilla Firefox pada komputer anda. Simpan Firefox terkini amat penting untuk keselamatan dalam talian anda, dan Mozilla dengan kuat mencadangkan yang anda menyimpan servis ini dibolehkan.
