--- a/ms/dom/chrome/accessibility/AccessFu.properties
+++ b/ms/dom/chrome/accessibility/AccessFu.properties
@@ -7,8 +7,27 @@ screenReaderStarted = Pembaca skrin bermula
 screenReaderStopped = Pembaca skrin berhenti
 
 # Roles
+menubar        =       bar menu
+scrollbar      =       bar skrol
+grip           =       genggam
+alert          =       waspada
+menupopup      =       menu timbul
+document       =       dokumen
+pane           =       tetingkap
+dialog         =       dialog
+separator      =       pemisah
+toolbar        =       bar alatan
+statusbar      =       bar status
 table          =       jadual
+columnheader   =       lajur pengepala
+rowheader      =       baris pengepala
+column         =       lajur
+row            =       baris
+cell           =       sel
 link           =       pautan
+list           =       senarai
+listitem       =       senarai item
+outline        =       garisan luar
 pushbutton     =       butang
 passwordtext   =       teks kata laluan
 imagemap       =       peta imej
