[te] update from Pootle (firefox)

--- a/te/webapprt/webapprt/webapp.properties
+++ b/te/webapprt/webapprt/webapp.properties
@@ -40,6 +40,10 @@ webapps.install.title=%S సంస్థాపించు
 webapps.install.description=మీరు %S సంస్థాపించాలని అనుకొనుచున్నారా?
 webapps.install.install=అనువర్తనం సంస్థాపించు
 webapps.install.dontinstall=సంస్థాపించ వద్దు
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
 
 paymentDialog.title=చెల్లింపు
 paymentDialog.message=మీరు ఏ చెల్లింపుదారును ఉపయోగించాలని అనుకొనుచున్నారు?
