--- a/te/browser/chrome/browser/browser.properties
+++ b/te/browser/chrome/browser/browser.properties
@@ -74,7 +74,6 @@ lwthemeInstallRequest.allowButton.accesskey=a
 
 lwthemePostInstallNotification.message=ఒక కొత్త రూపలావణ్య పద్ధతి సంస్థాపించబడినది.
 lwthemePostInstallNotification.undoButton=చేయవద్దు
-lwthemePostInstallNotification.undoButton.accesskey=U
 lwthemePostInstallNotification.manageButton=రూపలావణ్య పద్ధతులను నిర్వహించు…
 lwthemePostInstallNotification.manageButton.accesskey=M
 
@@ -97,6 +96,9 @@ popupBlock=%S కొరకు  పాప్అప్‌లను బ్లాక
 popupWarningDontShowFromMessage=పాప్అప్‌లు బ్లాక్ అయినప్పుడు ఈసందేశాన్ని చూపించవద్దు
 popupWarningDontShowFromLocationbar=పాప్-అప్స్ నిరోధితమైనప్పుడు సమాచార పట్టీను చూపవద్దు
 popupShowPopupPrefix='%S' చూపించు
+
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
 
 # missing plugin installer
 installPlugin.message = ఈ పేజీలో ఉన్న మాధ్యమాల్ని చూపించడానికి కావలసిన ప్లగిన్ను స్థాపించుకుంటారా?
@@ -444,6 +446,7 @@ webapps.install.accesskey = I
 webapps.requestInstall = మీరు ఈ సైటు (%2$S) నుండి "%1$S"ను స్థాపించుకోవాలని అనుకొంటున్నారా?
 webapps.install.success = అనువర్తనం స్థాపించబడింది.
 webapps.install.inprogress = స్థాపన జరుగుతోంది
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S యిప్పుడు నిండుతెరలో వుంది.
@@ -505,9 +508,13 @@ getUserMedia.shareScreen.message = మీరు మీ తెరను %S తో
 getUserMedia.shareCameraAndMicrophone.message = మీరు మీ కేమెరా మరియు మైక్రోఫోన్‌ను %S తోటి పంచుకొనవలెనని అనుకొనుచున్నారా?
 getUserMedia.shareScreenAndMicrophone.message = మీరు మీ మైక్రోఫోన్‌ను మరియు తెరను %S తోటి పంచుకొనవలెనని అనుకొనుచున్నారా?
 getUserMedia.noVideo.label = వీడియో లేదు
-getUserMedia.noWindowOrScreen.label = విండో లేదా తెర లేదు
 getUserMedia.noAudio.label = ఆడియో లేదు
 getUserMedia.shareEntireScreen.label = మొత్తం తెర
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -533,13 +540,19 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = పంచుకోవడం ఆపివేయి
 getUserMedia.stopSharing.accesskey = S
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = సురక్షితంకాని విషయాన్ని %S నిరోధించినది.
-mixedContentBlocked.keepBlockingButton.label = నిరోధిస్తూనేవుండు
-mixedContentBlocked.keepBlockingButton.accesskey = B
-mixedContentBlocked.unblock.label = ఈ పేజీపైన రక్షణను అచేతనంచేయి
-mixedContentBlocked.unblock.accesskey = D
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S నిదానంగా వుంది… ప్రారంభించుటకు…
