--- a/te/browser/chrome/browser/devtools/toolbox.properties
+++ b/te/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=అభివృద్ధికారి సాధనాలు
 # for the options panel tab.
 optionsButton.tooltip=సాధనపట్టీ ఐచ్చికాలు
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=ఐచ్ఛికములు
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=సాధనపెట్టె ఐచ్చికాల ప్యానల్
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=పేజీనుండి ఒక మూలకం తీసుకొనుము
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=డార్క్ థీమ్
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=లైట్ థీమ్
