--- a/te/browser/chrome/browser/newTab.properties
+++ b/te/browser/chrome/browser/newTab.properties
@@ -5,6 +5,20 @@
 newtab.pin=ఈ సైటును దాని ప్రస్తుత స్థానము వద్ద పిన్ చేయి
 newtab.unpin=ఈ సైటును అన్‌పిన్ చేయి
 newtab.block=ఈ సైటును తీసివేయి
-newtab.show=కొత్త టాబ్ పేజీ చూపుము
-newtab.hide=కొత్త టాబ్ పేజీ మరుగునవుంచు
-newtab.sponsored=ప్రాయోజక టైల్స్ పైన సమాచారం చూపుము
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.learn.link=మరింత తెలుసుకోండి…
+newtab.privacy.link=గోప్యతా నోటీసు
