[th] update from Pootle (firefox)

--- a/th/browser/chrome/browser/quitDialog.properties
+++ b/th/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&บันทึกและออก
 neverAsk2=ไ&ม่ต้องถามในครั้งหน้า
 message=คุณต้องการให้ %S บันทึกแท็บและหน้าต่างเพื่อใช้ในครั้งหน้าไหม
 messageNoWindows=คุณต้องการให้ %S บันทึกแท็บเพื่อใช้ในครั้งหน้าไหม
+messagePrivate=คุณกำลังอยู่ในโหมดการดูเว็บแบบส่วนตัว ออก %S ตอนนี้จะทิ้งแท็บและหน้าต่างที่เปิด
