--- a/th/browser/chrome/browser/tabbrowser.properties
+++ b/th/browser/chrome/browser/tabbrowser.properties
@@ -26,6 +26,6 @@ tabs.closeWarningTitle=ยืนยันการปิดโปรแกรม
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The singular form is not considered since this string is used only for
 # multiple tabs.
-tabs.closeWarningMultiple=;คุณกำลังจะปิดแท็บ #1 แท็บ ต้องการทำต่อหรือไม่?
+tabs.closeWarningMultiple=คุณกำลังจะปิดแท็บ #1 แท็บ ต้องการทำต่อหรือไม่?
 tabs.closeButtonMultiple=ปิดแท็บ
 tabs.closeWarningPromptMe=เตือนเมื่อจะปิดแท็บหลายแท็บ
