--- a/th/browser/chrome/browser/shellservice.properties
+++ b/th/browser/chrome/browser/shellservice.properties
@@ -7,8 +7,13 @@ safeModeLabel=%S โหมด&ปลอดภัย
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = ได้ประโยชน์สูงสุดจาก %S ด้วยการตั้งให้เป็นเบราเซอร์ปริยายของคุณ
+setDefaultBrowserConfirm.label     = ใช้ %S เป็นเบราเซอร์ปริยายของฉัน
+setDefaultBrowserConfirm.accesskey = ช
 setDefaultBrowserOptions.label     = ตัวเลือก
 setDefaultBrowserOptions.accesskey = ล
+setDefaultBrowserNotNow.label      = ไม่ใช่ตอนนี้
+setDefaultBrowserNotNow.accesskey  = ม
 setDefaultBrowserNever.label       = ไม่ต้องถามฉันอีก
 setDefaultBrowserNever.accesskey   = ม
 
