bug 1037015 - support tab casting to chromecas

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -169,6 +169,7 @@ selectionHelper.textCopied=Tekst został skopiowany do schowka
 
 # Casting
 casting.prompt=Przekaż do urządzenia
+casting.mirrorTab=Przekazana karta
 
 # Context menu
 contextmenu.openInNewTab=Otwórz odnośnik w nowej karcie
